--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.autocoin</groupId>
     <artifactId>autocoin-arbitrage-monitor</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <description>Watches various exchanges and calculates arbitrage statistics</description>
@@ -30,7 +29,7 @@
         <connection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</connection>
         <url>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</url>
         <developerConnection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>autocoin-arbitrage-monitor-1.1.0</tag>
     </scm>
 
     <dependencies>
@@ -214,8 +213,7 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>automate.profit.autocoin.ApplicationKt</mainClass>
                                 </transformer>
                             </transformers>
