--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.autocoin</groupId>
     <artifactId>autocoin-arbitrage-monitor</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <description>Watches various exchanges and calculates arbitrage statistics</description>
@@ -29,7 +29,7 @@
         <connection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</connection>
         <url>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</url>
         <developerConnection>scm:git:git@github.com:mgrzaslewicz/autocoin-arbitrage-monitor.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>autocoin-arbitrage-monitor-1.1.1</tag>
     </scm>
 
     <dependencies>
